src/objects/LeanData__Round_Robin_Setting__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Cap__c</fullName>
        <label>Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Capping_Last_Reset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capping Last Reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Current_Cap_Value__c</fullName>
        <label>Current Cap Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Grouping_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pool Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Grouping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Round Robin Grouping Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Hours__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hours</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Inactive_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactive Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Available_For_Routing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Available For Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Object_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__OwnerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OwnerId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Owner_Order__c</fullName>
        <label>Owner Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_Step__c</fullName>
        <label>Time Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__User_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Owner</relationshipLabel>
        <relationshipName>User_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Weighting_Next_Pointer__c</fullName>
        <label>Weighting Next Pointer</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Weighting_Value__c</fullName>
        <label>Weighting Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Round Robin Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Round Robin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>